fixing to card img

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <div class="container__cards">
                 <div class="cards__img">
                   <img src="./img/leftArrow.svg" class="cursor__img"  alt="#"/>
-                  <img src="/img/cloudCash.svg" class="card__img"  alt="#"/>
+                  <img src="./img/card/cloudCash.svg" class="card__img" alt="#"/>
                   <img src="./img/rightArrow.svg" class="cursor__img"  alt="#"/>
                 </div>
                 <div class="line"></div>
