Added css fixing

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 </div>
               </div>
             </div>
-            <div class="last-block">
+            <div class="container-transaction">
               <div class="container-new__transaction">
                 <h6 class="title-new">New transaction</h6>
                 <div class="new__transation-peoples">
